--- a/index.html
+++ b/index.html
@@ -22,6 +22,19 @@
   <link rel="stylesheet" href="css/tingo.css">
 
 </head>
+<!--Start of Tawk.to Script-->
+<script type="text/javascript">
+  var Tawk_API=Tawk_API||{}, Tawk_LoadStart=new Date();
+  (function(){
+  var s1=document.createElement("script"),s0=document.getElementsByTagName("script")[0];
+  s1.async=true;
+  s1.src='https://embed.tawk.to/5c94fd19101df77a8be3f843/default';
+  s1.charset='UTF-8';
+  s1.setAttribute('crossorigin','*');
+  s0.parentNode.insertBefore(s1,s0);
+  })();
+</script>
+<!--End of Tawk.to Script-->
 
 <body id="page-top">
 
@@ -291,17 +304,6 @@
 
         <!-- Begin Page Content -->
         <div class="container-fluid">
-
-          <!-- Page Heading -->
-          <div class="d-sm-flex mb-4 border-bottom-primary">
-            <div class="input-group mb-3">
-              <input type="text" class="form-control" aria-label="Amount (to the nearest dollar)">
-              <a href="#" class="btn btn-success btn-circle">
-                <i class="fas fa-check"></i>
-              </a>
-            </div>
-          </div>
-
           <!-- Content Row -->
           <div class="row">
 
@@ -426,23 +428,7 @@
                 </div>
                 <!-- Card Body -->
                 <div class="card-body">
-                  <div class="chart-pie pt-4 pb-2">
-                    <canvas id="myPieChart"></canvas>
-                  </div>
-                  <div class="mt-4 text-center small">
-                    <span class="mr-2">
-                      <i class="fas fa-circle text-primary"></i> Blue
-                    </span>
-                    <span class="mr-2">
-                      <i class="fas fa-circle text-success"></i> Green
-                    </span>
-                    <span class="mr-2">
-                      <i class="fas fa-circle text-danger"></i> Red
-                    </span>
-                    <span class="mr-2">
-                      <i class="fas fa-circle text-warning"></i> Gold
-                    </span>
-                  </div>
+                    <iframe id="chat" frameborder="0" scrolling="no" marginheight="0" marginwidth="0" allowtransparency="true" src="https://chatroll.com/embed/chat/rdkx?id=1x3MZCuyAkQ&platform=html"></iframe>
                 </div>
               </div>
             </div>
