--- a/deposit.html
+++ b/deposit.html
@@ -64,7 +64,7 @@
       <li class="nav-item active">
         <a class="nav-link" href="index.html">
           <i class="fas fa-fw fa-dice-one"></i>
-          <span>Balackjack?</span></a>
+          <span>Blackjack?</span></a>
       </li>
       <li class="nav-item active">
         <a class="nav-link" href="index.html">
@@ -144,7 +144,7 @@
                   </div>
                 </a>
 
-                <a class="dropdown-item text-center small text-gray-500" href="./deposit.html">Deposit/Withdraw</a>
+                <a class="dropdown-item text-center small text-gray-500" href="#">Deposit/Withdraw</a>
               </div>
             </li>
 
@@ -209,137 +209,10 @@
         <!-- Begin Page Content -->
         <div class="container-fluid">
           <!-- Content Row -->
-          <div class="row">
-
-            <!-- Blue Bet -->
-            <div class="col-xl-3 col-md-6 mb-4 bet-card">
-              <div class="card border-left-primary shadow h-100 py-2">
-                <div class="card-body">
-                  <div class="row no-gutters align-items-center">
-                    <div class="col mr-2">
-                      <div class="text-xs font-weight-bold text-primary text-uppercase mb-1">Blue (2x)</div>
-                      <div class="h5 mb-0 font-weight-bold text-gray-800">$0</div>
-                      <a class="dropdown-item bet-button bg-primary" href="#">Bet on Blue</a>
-                    </div>
-                    <div class="col-auto">
-                    </div>
-                  </div>
-                </div>
-              </div>
-            </div>
-
-            <!-- Green Bet -->
-            <div class="col-xl-3 col-md-6 mb-4 bet-card">
-              <div class="card border-left-success shadow h-100 py-2">
-                <div class="card-body">
-                  <div class="row no-gutters align-items-center">
-                    <div class="col mr-2">
-                      <div class="text-xs font-weight-bold text-success text-uppercase mb-1">Green (3x)</div>
-                      <div class="h5 mb-0 font-weight-bold text-gray-800">$0</div>
-                      <a class="dropdown-item bet-button bg-success" href="#">Bet on Green</a>
-                    </div>
-                    <div class="col-auto">
-                    </div>
-                  </div>
-                </div>
-              </div>
-            </div>
-
-            <!-- Red Bet -->
-            <div class="col-xl-3 col-md-6 mb-4 bet-card">
-                <div class="card border-left-danger shadow h-100 py-2">
-                  <div class="card-body">
-                    <div class="row no-gutters align-items-center">
-                      <div class="col mr-2">
-                        <div class="text-xs font-weight-bold text-danger text-uppercase mb-1">Red (5x)</div>
-                        <div class="h5 mb-0 font-weight-bold text-gray-800">$0</div>
-                        <a class="dropdown-item bet-button bg-danger" href="#">Bet on Red</a>
-                      </div>
-                      <div class="col-auto">
-                      </div>
-                    </div>
-                  </div>
-                </div>
-              </div>
-
-            <!-- Gold Bet -->
-            <div class="col-xl-3 col-md-6 mb-4 bet-card">
-                <div class="card border-left-warning shadow h-100 py-2">
-                  <div class="card-body">
-                    <div class="row no-gutters align-items-center">
-                      <div class="col mr-2">
-                        <div class="text-xs font-weight-bold text-warning text-uppercase mb-1">Gold (50x)</div>
-                        <div class="h5 mb-0 font-weight-bold text-gray-800">$0</div>
-                        <a class="dropdown-item bet-button bg-warning" href="#">Bet on Gold</a>
-                      </div>
-                      <div class="col-auto">
-                      </div>
-                    </div>
-                  </div>
-                </div>
-              </div>
-
-          <!-- Content Row -->
-
-
-            <!-- Area Chart -->
-            <div class="col-xl-8 col-lg-7">
-              <div class="card shadow mb-4">
-                <!-- Card Header - Dropdown -->
-                <div class="card-header py-3 d-flex flex-row align-items-center justify-content-between">
-                  <h6 class="m-0 font-weight-bold text-primary">Roulette Wheel</h6>
-                  <button id="testbutton"></button>
-                  <div class="dropdown no-arrow">
-                    <a class="dropdown-toggle" href="#" role="button" id="dropdownMenuLink" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
-                      <i class="fas fa-ellipsis-v fa-sm fa-fw text-gray-400"></i>
-                    </a>
-                    <div class="dropdown-menu dropdown-menu-right shadow animated--fade-in" aria-labelledby="dropdownMenuLink">
-                      <div class="dropdown-header">Verify hash:</div>
-                      <a class="dropdown-item" href="#">Hash lookup</a>
-                      <a class="dropdown-item" href="#">Raw data?</a>
-                      <div class="dropdown-divider"></div>
-                      <a class="dropdown-item" href="#">Copy hash to clipboard</a>
-                    </div>
-                  </div>
-                </div>
-                <!-- Card Body -->
-                <div class="card-body">
-                  <div class="chart-area">
-                    <canvas id="roulettesquare" height="100px" width="100px">Bingo</canvas>
-                  </div>
-                </div>
-              </div>
-            </div>
-
-            <!-- Pie Chart -->
-            <div class="col-xl-4 col-lg-5">
-              <div class="card shadow mb-4">
-                <!-- Card Header - Dropdown -->
-                <div class="card-header py-3 d-flex flex-row align-items-center justify-content-between">
-                  <h6 class="m-0 font-weight-bold text-primary">Chat</h6>
-                  <div class="dropdown no-arrow">
-                    <a class="dropdown-toggle" href="#" role="button" id="dropdownMenuLink" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
-                      <i class="fas fa-ellipsis-v fa-sm fa-fw text-gray-400"></i>
-                    </a>
-                    <div class="dropdown-menu dropdown-menu-right shadow animated--fade-in" aria-labelledby="dropdownMenuLink">
-                      <div class="dropdown-header">wawa:</div>
-                      <a class="dropdown-item" href="#">Bingo</a>
-                      <a class="dropdown-item" href="#">blyat</a>
-                      <div class="dropdown-divider"></div>
-                      <a class="dropdown-item" href="#">cyka</a>
-                    </div>
-                  </div>
-                </div>
-                <!-- Card Body -->
-                <div class="card-body">
-                    <iframe id="chat" frameborder="0" scrolling="no" marginheight="0" marginwidth="0" allowtransparency="true" src="https://chatroll.com/embed/chat/rdkx?id=1x3MZCuyAkQ&platform=html"></iframe>
-                </div>
-              </div>
-            </div>
-          </div>
 
           <!-- Content Row -->
           <div class="row">
+            <h2>Deposit lol, not working atm but monkey is on the way</h2>
 
             <!-- Content Column -->
             <div class="col-lg-6 mb-4">
